--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,10 @@ nav:
   - Home:
     - index.md
   - Papers:
+    - Diffusion Models:
+      - DDPM: CV/DM/DDPM.md
+      - DDIM: CV/DM/DDIM.md
+      - Stable Diffusion: CV/DM/SD.md
     - NeRF: Papers/NeRF/Theory.md
     - 3DGS: Papers/3DGS/paper.md
     - 4DGS: 
@@ -136,8 +140,6 @@ nav:
       - Order Statistics : PT/order_stats.pdf
       - 数字特征与特征函数: PT/数字特征与特征函数.md
   - Computer Vision :
-    - Diffusion Models:
-      - Basics: CV/DM/Basics.md
     - ML-4360:
       - Basic Transformations : CV/ML-4360/BS/lec2.md
       - structure from motion : CV/ML-4360/SFM/lec3.md
