--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,8 @@ nav:
   
       
   - Computer Science(ZJU):
+    - Theoretical Computer Science:
+      - Lecture 1: 计算理论/Lecture1.md
     - Fundamentals of Data Structure:
       - Maximum Subsequence Sum Problem: note/最大子列和.md
       - Basic data Structures I: note/基础数据结构.md
