--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,10 @@ nav:
     - Theoretical Computer Science:
       - Lecture 1 - Finite Automata : 计算理论/lec1/Lecture1.md
       - Lecture 2 - Regular Language : 计算理论/lec2/Lecture2.md
+    - PPL:
+      - Lecture 1 - lambda calculus : PPL/lec1/lec1.md
+      - Lecture 2 - Abstract Syntax Trees : PPL/lec2/lec2.md
+
     - Fundamentals of Data Structure:
       - Maximum Subsequence Sum Problem: note/最大子列和.md
       - Basic data Structures I: note/基础数据结构.md
