--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,9 +62,12 @@ nav:
       - Lecture 1 - Finite Automata : 计算理论/lec1/Lecture1.md
       - Lecture 2 - Regular Language : 计算理论/lec2/Lecture2.md
       - Lecture 3 - Context-Free Language : 计算理论/lec3/Lecture3.md
+      - Lecture 4 - Push-Down-Automata : 计算理论/lec4/Lecture4.md
+      - Lecture 5 - Turing Machine : 计算理论/lec5/Lecture5.md
     - Operating System:
       - Lecture 1 - Introduction : OS/lec1/lec1.md
       - Lecture 2 - OS Structure : OS/lec2/lec2.md
+      - Lecture 3 - Process : OS/lec3/lec3.md
     - PPL:
       - Lecture 1 - lambda calculus : PPL/lec1/lec1.md
       - Lecture 2 - Abstract Syntax Trees : PPL/lec2/lec2.md
